Fix overlap of settings header

--- a/src/pages/templates/wide-header-page/wide-header-page.scss
+++ b/src/pages/templates/wide-header-page/wide-header-page.scss
@@ -10,7 +10,7 @@ wide-header-page {
       color: rgba(20, 42, 63, 1);
       font-size: 25px;
       font-weight: 500;
-      padding-top: 30px;
+      padding-top: 50px;
       padding-bottom: 20px;
       padding-left: 20px;
     }
